[gd_scene load_steps=49 format=3 uid="uid://xd3spey3oh72"]

[ext_resource type="Script" uid="uid://gh5yft8sumst" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bln3a1dya820n" path="res://assets/Animations/PlayerRunRight.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://dw4ojlfkv3wdj" path="res://assets/Animations/Climb Left.png" id="2_ur7pv"]
[ext_resource type="Texture2D" uid="uid://6e33syophxmg" path="res://assets/Animations/Climb Right.png" id="3_y4r1p"]
[ext_resource type="Texture2D" uid="uid://c2naalwsrf473" path="res://assets/Animations/Grapple Left.png" id="4_3v2ag"]
[ext_resource type="Texture2D" uid="uid://cph6bxa7yiros" path="res://assets/Animations/IdleLeft.png" id="4_d2wvv"]
[ext_resource type="Texture2D" uid="uid://de0wdmsejwaa6" path="res://assets/Animations/IdleRight.png" id="5_3v2ag"]
[ext_resource type="Texture2D" uid="uid://dx41t0qlay2hf" path="res://assets/Animations/Grapple Right.png" id="5_jej6c"]
[ext_resource type="Texture2D" uid="uid://uhn8cujywae8" path="res://assets/Animations/PlayerRunLeft.png" id="6_jej6c"]
[ext_resource type="Texture2D" uid="uid://cm4qmlop3b8wd" path="res://assets/Animations/SlideLeft.png" id="8_f1ej7"]
[ext_resource type="Texture2D" uid="uid://b2wiqgc503360" path="res://assets/Animations/SlideRight.png" id="9_oprun"]
[ext_resource type="Texture2D" uid="uid://esvl1uq0o2aw" path="res://assets/Animations/Grapple Arm Chain.png" id="12_3v2ag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(22.966885, 111.86996)

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(62, 46.755722)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_ur7pv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_ur7pv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_y4r1p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_y4r1p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("4_3v2ag")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("5_jej6c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("5_jej6c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("4_d2wvv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("4_d2wvv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("5_3v2ag")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("5_3v2ag")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("6_jej6c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("6_jej6c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("6_jej6c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("6_jej6c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("6_jej6c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("6_jej6c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("6_jej6c")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("6_jej6c")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_g2els")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_g2els")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_g2els")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_g2els")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_g2els")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_g2els")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_g2els")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("8_f1ej7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("8_f1ej7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("9_oprun")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("9_oprun")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d2wvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}],
"loop": true,
"name": &"climbLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}],
"loop": true,
"name": &"climbRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"grappleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": true,
"name": &"grappleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}],
"loop": true,
"name": &"idleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}],
"loop": true,
"name": &"idleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}],
"loop": true,
"name": &"runLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"runRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}],
"loop": true,
"name": &"slideLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}],
"loop": true,
"name": &"slideRight",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1, 1.048)
script = ExtResource("1_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.06666667, 0.03529412, 1, 1)
top_level = true
position = Vector2(1, 11.0650215)
scale = Vector2(1.0014417, 1)
shape = SubResource("RectangleShape2D_g2els")
one_way_collision = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -100)
zoom = Vector2(0.3, 0.3)

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_g2els")

[node name="SlideShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 41.030537)
shape = SubResource("RectangleShape2D_qhqgy")
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
modulate = Color(0.5500365, 0, 0.085978664, 1)
self_modulate = Color(0.52353066, 2.5870278e-07, 3.3691526e-07, 1)
target_position = Vector2(0, -200)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2.008)
sprite_frames = SubResource("SpriteFrames_d2wvv")
animation = &"grappleLeft"

[node name="GrappleLine" type="Line2D" parent="."]
visible = false
width = 512.0
texture = ExtResource("12_3v2ag")
texture_mode = 1

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
